# AstroGensis1.0

./: .gitattributes  .gitignore  CMakeLists.oop  CMakeLists.txt  Next - Verknüpfung.lnk  README.md  getting started.txt  getting started.txt - Verknüpfung.lnk  openVSCode.sh
Auswertungen/: EnergieVerlustVergleich.xlsx  NumericalMethods.doc
Documentation/Documentation/: Documentation Physical Background.docx  Keyboard for the 3D viewer.txt
Documentation/Doku JuFo German/: EnergieVerlustVergleich.xlsx
Doku/: .~lock.multithreadingGesch.xlsx#  BarnetHut.doc  EnergieVerlustVergleich.xlsx  Energie_Vegleich.xlsx  GuteKurvendocx.docx  Richtige Doku.docx  RotationsCurves.docx  Version 1 12.1.24.docx  Version 3 12.1.24.docx  doku.docx  jugendFroscht1000z.txt  multithreadingGesch.xlsx  version 2 12.1.24.docx
Doku/Doku JuFo German/: multithreadingGesch.xlsx
External_Libraries_Linux/GLEW/doc/: advanced.html  basic.html  build.html  credits.html  glew.html  glxew.html  index.html  install.html  log.html  wglew.html
External_Libraries_Linux/GLFW/docs/html/: build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  doxygen.css  dynsections.js  extra.css  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8dox.html  input_guide.html  intro_8dox.html  intro_guide.html  jquery.js  main_8dox.html  modules.html  monitor_8dox.html  monitor_guide.html  moving_8dox.html  (+14 more)
External_Libraries_Linux/GLFW/docs/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  (+95 more)
External_Libraries_Linux/GLM/: .appveyor.yml  .travis.yml  manual.md  readme.md
External_Libraries_Linux/GLM/doc/api/: a00017.html  a00017_source.html  a00044.html  a00044_source.html  a00242.html  a00315.html  a00331.html
External_Libraries_Linux/GLM/test/core/: core_func_common.cpp  core_func_matrix.cpp  core_setup_message.cpp  core_type_length.cpp
External_Libraries_Linux/GLM/test/ext/: ext_matrix_common.cpp  ext_quaternion_trigonometric.cpp  ext_scalar_common.cpp  ext_vector_common.cpp
External_Libraries_Linux/GLM/test/gtc/: gtc_quaternion.cpp
External_Libraries_Linux/GLM/test/gtx/: gtx_fast_trigonometry.cpp  gtx_matrix_decompose.cpp  gtx_matrix_interpolation.cpp  gtx_matrix_operation.cpp  gtx_matrix_query.cpp
External_Libraries_Linux/GLM/util/: glm.natvis
GLApp/: density_Curve.txt  rotationCurve.txt  rotationCurves.xlsx  velocty_Curve.txt
GLApp/Energie Daten/: Daten auswertung.xlsx  EulerData.txt  Leapfrog Data.txt  Midpoint Data.txt  Verlet data.txt
GLApp/Energie_Daten/: Data_auswertung_1h.xlsx  Euler_Data.txt  Leapfrog_Data.txt  Verlet_data.txt  rungeKutta_Data.txt
GLApp/Energie_Daten/1000sec/: Data_auswertung_1000sec.xlsx  Euler_Data.txt  Leapfrog_Data.txt  rungeKutta_Data.txt
GLApp/GLApp/: GLApp.vcxproj  GLApp.vcxproj.filters  Menu.cpp  Menu.h  config.ini  delete_Data.bat  main.cpp  mainLinux.test
GLApp/GLApp/Configs/: config.ini
GLApp/GLApp/Data/#/: info.txt
GLApp/GLApp/Data/Andromeda Kollision S0/: info.txt
GLApp/GLApp/Data/Bullet Cluster new/: info.txt
GLApp/GLApp/Data/Data/: info.txt
GLApp/GLApp/Data/S0 Rotating/: info.txt
GLApp/GLApp/Data/Solarsystem with NASA Data 1.1.2020 - 1.1.2024/: info.txt
GLApp/GLApp/Data/Spinning S0 Galaxy with old Pressureforce/: info.txt
GLApp/GLApp/Data/Vorsimulation Andromeda/: info.txt
GLApp/GLApp/Data/Vorsimulation Milkyway Andromeda/: info.txt
GLApp/GLApp/Data/kurz/: info.txt
GLApp/GLApp/Data/lol/: info.txt
GLApp/GLApp/File/: FileManager.cpp  FileManager.h
GLApp/GLApp/Math/: MathFunctions.cpp  MathFunctions.h  Units.cpp  Units.h  Vector3.h
GLApp/GLApp/Physics/: Node.cpp  Node.h  Octree.cpp  Octree.h  Particle.cpp  Particle.h  Physics.cpp  Physics.h  SystemInit.cpp  SystemInit.h
GLApp/GLApp/Physics/BarnesHut/: Node.cpp  Node.h  Octree.cpp  Octree.h
GLApp/GLApp/Physics/Cluster/: Cluster.cpp  Cluster.h
GLApp/GLApp/Physics/Galaxies/: BarredGalaxy.cpp  BarredGalaxy.h  EllipticalGalaxy.cpp  EllipticalGalaxy.h  Halo.cpp  Halo.h  SpiralGalaxy.cpp  SpiralGalaxy.h
GLApp/GLApp/Rendering/: Engine.cpp  Engine.h
GLApp/GLApp/Video/dfg/: convert_images_to_video.bat
GLApp/Solar System data/: Earth.txt  Jupiter.txt  Mars.txt  Mercury,.txt  Moon.txt  Neptune.txt  Saturn.txt  Sun.txt  Uranus.txt  Venus.txt
GLApp/Solar System data/2020.01.01/: Earth.txt  Jupiter.txt  Mars.txt  Mercury.txt  Neptune.txt  Saturn.txt  Sun.txt  Uranus.txt  Venus.txt
GLApp/Solar System data/2020.01.01/ergebnisse/: Earth.txt
scenarios/Collision Milkyway Andromeda/: config.ini
(+4 files in other folders)
